api-gateway/1-getting-started/manifests/weather-app-apikey.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: apikey-auth
  namespace: apps
spec:
  plugin:
    apiKey:
      keySource:
        header: Authorization
        headerAuthScheme: Bearer
      secretValues:
        - urn:k8s:secret:apikey-auth:secretKey

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: getting-started-apigateway-api-key
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`getting-started.apigateway.docker.localhost`) && Path(`/api-key`)
    kind: Rule
    services:
    - name: weather-app
      port: 3000
    middlewares:
    - name: apikey-auth
